[tool.poetry]
name = "python-webapp"
version = "0.1.0"
description = ""
authors = ["miguelm7 <miguelmore100@gmail.com>"]
readme = "README.md"
packages = [{include = "python_webapp"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
